[gd_scene load_steps=51 format=3 uid="uid://lfmqx8w7ufxn"]

[ext_resource type="Texture2D" uid="uid://dyso7rrc2gh0u" path="res://Assets/PNG/Light/texture_08.png" id="1_6444e"]
[ext_resource type="Script" uid="uid://d3op4vm6ecw7w" path="res://Scenes/level_1.gd" id="1_wrinw"]
[ext_resource type="Texture2D" uid="uid://dvcleirpcf1ni" path="res://Assets/Lab Map (w texture)/floor texture/Metal055B_4K-JPG_Color.jpg" id="2_1fal7"]
[ext_resource type="Texture2D" uid="uid://bo44bapdnf5co" path="res://Assets/PNG/Orange/texture_03.png" id="2_evi0p"]
[ext_resource type="Texture2D" uid="uid://dlu5a08hh0c75" path="res://Assets/PNG/Orange/texture_10.png" id="2_xrdnt"]
[ext_resource type="Texture2D" uid="uid://dleiw7aa1hkq0" path="res://Assets/Lab Map (w texture)/floor texture/Metal055B_4K-JPG_Displacement.jpg" id="3_gcla0"]
[ext_resource type="Material" uid="uid://bnbys67daxjo6" path="res://Assets/Lab Map (w texture)/wall texture/metalwall.tres" id="3_yltlr"]
[ext_resource type="Texture2D" uid="uid://jsi180lqps25" path="res://Assets/Lab Map (w texture)/floor texture/Metal055B_4K-JPG_Metalness.jpg" id="4_vr6f4"]
[ext_resource type="PackedScene" uid="uid://bjxwqe64spwid" path="res://Objects/door.tscn" id="4_xrdnt"]
[ext_resource type="PackedScene" uid="uid://d3snu2sbpkn6c" path="res://Objects/fan.tscn" id="5_chwpn"]
[ext_resource type="Texture2D" uid="uid://fpdrt48dy27w" path="res://Assets/Lab Map (w texture)/floor texture/Metal055B_4K-JPG_NormalGL.jpg" id="5_u5cqy"]
[ext_resource type="Script" uid="uid://btb8exwohefpc" path="res://Scripts/reset_zone.gd" id="5_wrinw"]
[ext_resource type="Texture2D" uid="uid://dltfogr5e3egr" path="res://Assets/Lab Map (w texture)/floor texture/Metal055B_4K-JPG_Roughness.jpg" id="6_u0op5"]
[ext_resource type="Script" uid="uid://c4xxklbns0623" path="res://Scripts/trigger_safe.gd" id="7_lsmp6"]
[ext_resource type="AudioStream" uid="uid://c50opam7yod65" path="res://Scripts/VoiceLine/Ratchet Wrench - Sound Effect - onlysounds.mp3" id="12_8i23i"]
[ext_resource type="AudioStream" uid="uid://bl0bmw0lv55gc" path="res://Scripts/VoiceLine/Video_Ready_For_Viewing.mp3" id="12_oovug"]
[ext_resource type="FontFile" uid="uid://s756v0yn0c5v" path="res://Scripts/Font/wheaton-capitals/wheaton capitals.otf" id="12_pjppf"]
[ext_resource type="PackedScene" uid="uid://bfy6d7r0vstn8" path="res://Objects/platformmm.tscn" id="13_1fal7"]
[ext_resource type="Script" uid="uid://bb1rdf30itqv0" path="res://Scripts/TriggerScript/label.gd" id="13_8yhm2"]
[ext_resource type="AudioStream" uid="uid://cij3gnspv1eik" path="res://Scripts/VoiceLine/Impact Wrench - Sound Effect - onlysounds.mp3" id="13_pjppf"]
[ext_resource type="Script" uid="uid://cwux6qjmdsw3i" path="res://Scenes/area_3d.gd" id="14_8i23i"]
[ext_resource type="Script" uid="uid://nxudpdnmvlaa" path="res://Scripts/color_rect.gd" id="15_yltlr"]
[ext_resource type="Script" uid="uid://crvnact13sk8f" path="res://Scripts/TriggerScript/interact_door.gd" id="17_8yhm2"]
[ext_resource type="PackedScene" uid="uid://dfapk031fuvah" path="res://Objects/spikesssss.tscn" id="19_yltlr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1f27d"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pm77i"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xub2v"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x5u8r"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nwpk5"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lk3dh"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ts4pv"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7sml1"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bd6hb"]
albedo_texture = ExtResource("2_1fal7")
metallic = 1.0
metallic_texture = ExtResource("4_vr6f4")
roughness_texture = ExtResource("6_u0op5")
normal_enabled = true
normal_texture = ExtResource("5_u5cqy")
heightmap_enabled = true
heightmap_texture = ExtResource("3_gcla0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6r07y"]
albedo_texture = ExtResource("2_evi0p")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_af3po"]
albedo_texture = ExtResource("1_6444e")
uv1_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_6ioyp"]
size = Vector3(5.5410156, 1, 3.3754883)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wrinw"]
height = 0.44836426
radius = 1.1738281

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1fal7"]
height = 0.16186523
radius = 1.9692383

[sub_resource type="BoxShape3D" id="BoxShape3D_evi0p"]
size = Vector3(22, 1, 7.9793167)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wrinw"]
albedo_texture = ExtResource("2_xrdnt")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_xrdnt"]
lightmap_size_hint = Vector2i(154, 116)
size = Vector3(20, 0.5, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_lsmp6"]
size = Vector3(19.963623, 1, 7.9416656)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wrinw"]
points = PackedVector3Array(-10, -0.5, -5, -10, 0.5, -5, 10, -0.5, -5, -10, -0.5, 5, -10, 0.5, 5, 10, 0.5, -5, 10, -0.5, 5, 10, 0.5, 5)

[sub_resource type="GDScript" id="GDScript_ijtdf"]
script/source = "extends Area3D

@onready var narration = $IntroVoice
@onready var subtitle_label = $\"../CanvasLayer/Label\"

var triggered := false

func _ready() -> void:
	await get_tree().process_frame
	for body in get_overlapping_bodies():
		if body is CharacterBody3D:
			_trigger(body)
			break

func _on_body_entered(body: Node3D) -> void:
	if body is CharacterBody3D:
		_trigger(body)

func _trigger(body: Node3D) -> void:
	if triggered:
		return
	triggered = true

	narration.play()
	subtitle_label.visible = true

	subtitle_label.text = \"Dr. Aris: Initiating Unit 77 stress test. Remember, this prototype cost six billion credits. Let’s not break it in the first five minutes.\"
	await get_tree().create_timer(4.0).timeout

	subtitle_label.text = \"Dr. Ben: Relax. I’ve enabled S.A.F.E. protocols. The lab will practically play the game for it. Unit 77, please proceed to the exit.\"
	await get_tree().create_timer(4.0).timeout

	subtitle_label.visible = false
	body_entered.disconnect(_on_body_entered)
"

[sub_resource type="BoxShape3D" id="BoxShape3D_pjppf"]
size = Vector3(9.710327, 4.6895905, 9.374268)

[sub_resource type="GDScript" id="GDScript_6ssoq"]
script/source = "extends Area3D

@onready var narration = $DeathVoicee
@onready var subtitle_label = $\"../CanvasLayer/Label\"

func _ready() -> void:
	body_entered.connect(_on_body_entered)

func _on_body_entered(body: Node3D) -> void:
	if body is CharacterBody3D:
		_play_sequence()

func _play_sequence() -> void:
	narration.stop()
	narration.play()
	
	subtitle_label.visible = true

	subtitle_label.text = \"S.A.F.E.: Spike hazard detected. Impact absorbed by safety platform.\"
	await get_tree().create_timer(3.0).timeout

	subtitle_label.text = \"S.A.F.E.: Unit 77 remains intact. Metrics stable.\"
	await get_tree().create_timer(3.0).timeout

	subtitle_label.text = \"S.A.F.E.: Warning — repeated misuse of safety systems may trigger unintended failure.\"
	await get_tree().create_timer(2.5).timeout

	subtitle_label.visible = false
"

[sub_resource type="BoxShape3D" id="BoxShape3D_yltlr"]
size = Vector3(20.595917, 1.3001709, 7.877014)

[sub_resource type="GDScript" id="GDScript_c5xoi"]
script/source = "extends Area3D

@onready var narration = $FailedVoice
@onready var subtitle_label = $\"../CanvasLayer/Label\"

func _ready() -> void:
	body_entered.connect(_on_body_entered)

func _on_body_entered(body: Node3D) -> void:
	if body is CharacterBody3D:
		_play_sequence()

func _play_sequence() -> void:
	narration.stop()
	narration.play()

	subtitle_label.visible = true

	subtitle_label.text = \"Dr. Aris: Initiating Unit 77 stress test. Remember, this prototype cost six billion credits. Let’s not break it in the first five minutes.\"
	await get_tree().create_timer(4.0).timeout

	subtitle_label.text = \"Dr. Ben: Relax. I’ve enabled S.A.F.E. protocols. The lab will practically play the game for it. Unit 77, please proceed to the exit.\"
	await get_tree().create_timer(4.0).timeout

	subtitle_label.visible = false
"

[sub_resource type="BoxShape3D" id="BoxShape3D_6ssoq"]
size = Vector3(2.441986, 2.2086182, 1.3613281)

[sub_resource type="BoxShape3D" id="BoxShape3D_imks0"]
size = Vector3(3.1660843, 3.746338, 2.4358368)

[node name="Level1" type="Node3D"]
script = ExtResource("1_wrinw")
next_level_path = "uid://b4on05tkph3dv"

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25146484, -1.0485325)
size = Vector3(10, 0.497, 34)
material = SubResource("StandardMaterial3D_1f27d")

[node name="CSGBox3D7" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, -1, 1, -4.371139e-08, 0, -4.371139e-08, -1, -4.371139e-08, 0.053466797, 4.8404493, 15.730074)
size = Vector3(10, 0.497, 11.024902)
material = ExtResource("3_yltlr")

[node name="CSGBox3D30" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, -1, 1, -4.371139e-08, 0, -4.371139e-08, -1, -4.371139e-08, 0.4961853, 11.8501, 8.047123)
size = Vector3(10, 0.497, 22.135437)
material = ExtResource("3_yltlr")

[node name="CSGBox3D8" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, -1, 1, -4.371139e-08, 0, -4.371139e-08, -1, -4.371139e-08, 0.053466797, 4.8404493, -49.075264)
size = Vector3(10, 0.497, 11.024902)
material = ExtResource("3_yltlr")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -0.4064026, -6.818725, -17.828384)
size = Vector3(23.643127, 0.497, 12.785156)
material = SubResource("StandardMaterial3D_pm77i")

[node name="CSGBox3D21" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -1, -8.940697e-08, 0, 8.940697e-08, -1, -9.816843, -0.24848954, -12.523746)
size = Vector3(10, 0.497, 11.258545)
material = SubResource("StandardMaterial3D_xub2v")

[node name="CSGBox3D22" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -1, -8.940697e-08, 0, 8.940697e-08, -1, 9.705671, -0.24848954, -12.459781)
size = Vector3(10, 0.497, 11.130615)
material = SubResource("StandardMaterial3D_x5u8r")

[node name="CSGBox3D23" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1.3311836e-07, -1, 0, 1, 1.3311836e-07, 9.705671, 0.3929899, -10.866105)
size = Vector3(10, 0.497, 13.407471)
material = ExtResource("3_yltlr")

[node name="CSGBox3D24" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1.3311836e-07, -1, 0, 1, 1.3311836e-07, -10.511021, 0.3929899, -10.866105)
size = Vector3(10, 0.497, 13.407471)
material = ExtResource("3_yltlr")

[node name="CSGBox3D25" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1.3311836e-07, -1, 0, 1, 1.3311836e-07, -10.511021, 0.3929899, -33.824646)
size = Vector3(10, 0.497, 13.407471)
material = ExtResource("3_yltlr")

[node name="CSGBox3D26" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1.3311836e-07, -1, 0, 1, 1.3311836e-07, 10.3412075, 0.3929899, -33.824646)
size = Vector3(10, 0.497, 13.407471)
material = ExtResource("3_yltlr")

[node name="CSGBox3D27" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -1, -8.9406974e-08, 0, 8.9406974e-08, -1, 9.94166, -0.27411938, -32.650276)
size = Vector3(10, 0.497, 13.407471)
material = SubResource("StandardMaterial3D_nwpk5")

[node name="CSGBox3D28" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -1, -8.9406974e-08, 0, 8.9406974e-08, -1, -9.938135, -0.27411938, -32.650276)
size = Vector3(10, 0.497, 13.407471)
material = SubResource("StandardMaterial3D_lk3dh")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0.17272949, -6.426147, -26.209152)
size = Vector3(20.606201, 0.497, 12)
material = SubResource("StandardMaterial3D_ts4pv")

[node name="CSGBox3D10" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.19833374, -13.2384815, -24.05822)
size = Vector3(23.005798, 0.497, 12.689331)
material = SubResource("StandardMaterial3D_7sml1")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25146484, -37.437023)
size = Vector3(10, 0.497, 22.960083)
material = SubResource("StandardMaterial3D_bd6hb")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 5.170293, -3.9405093, 2.4428253)
size = Vector3(20.976563, 0.497, 27)
material = ExtResource("3_yltlr")

[node name="CSGBox3D12" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 5.170293, -3.9405093, -47.297768)
size = Vector3(20.976563, 0.497, 27)
material = ExtResource("3_yltlr")

[node name="CSGBox3D13" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -5.509921, -3.9405093, -47.297768)
size = Vector3(20.976563, 0.497, 27)
material = ExtResource("3_yltlr")

[node name="CSGBox3D18" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -10.231733, -3.9405093, -22.130825)
size = Vector3(20.976563, 0.497, 27)
material = ExtResource("3_yltlr")

[node name="CSGBox3D11" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, -2.9802322e-08, -1, 0, 0, 0, 1, 0.29102325, 6.728392, 2.2893562)
size = Vector3(20.976563, 0.497, 26.708008)
material = ExtResource("3_yltlr")

[node name="CSGBox3D14" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, -2.9802322e-08, -1, 0, 0, 0, 1, 0.29102325, 6.728392, -47.301147)
size = Vector3(20.976563, 0.497, 26.708008)
material = ExtResource("3_yltlr")

[node name="CSGBox3D15" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, -2.9802322e-08, -1, 0, 0, 0, 1, 0.29102325, 14.845011, -13.996067)
size = Vector3(20.976563, 0.497, 45.476074)
material = ExtResource("3_yltlr")

[node name="CSGBox3D16" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, 1.3027009e-15, 4.371139e-08, -0.48375982, -2.9802322e-08, -1, -2.1145814e-08, 0.29102325, 12.960064, -33.89559)
size = Vector3(20.976563, 0.497, 26.708008)
material = ExtResource("3_yltlr")

[node name="CSGBox3D17" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, 1.3027009e-15, 4.371139e-08, -0.48375982, -2.9802322e-08, -1, -2.1145814e-08, 0.29102325, 12.960064, -10.996517)
size = Vector3(20.976563, 0.497, 26.708008)
material = ExtResource("3_yltlr")

[node name="CSGBox3D19" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(7.351371e-08, 1, 2.1145814e-08, 1.3027009e-15, 4.371139e-08, -0.48375982, -1, 7.351371e-08, 9.243128e-16, -10.261731, 12.960064, -12.616159)
size = Vector3(43.643677, 0.497, 26.708008)
material = ExtResource("3_yltlr")

[node name="CSGBox3D20" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(7.351371e-08, 1, 2.1145814e-08, 1.3027009e-15, 4.371139e-08, -0.48375982, -1, 7.351371e-08, 9.243128e-16, 11.006818, 12.960064, -13.187693)
size = Vector3(42.50061, 0.497, 26.708008)
material = ExtResource("3_yltlr")

[node name="CSGBox3D29" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(7.351371e-08, 1, 2.1145814e-08, 1.3027009e-15, 4.371139e-08, -0.48375982, -1, 7.351371e-08, 9.243128e-16, 11.006819, -3.2595005, -22.761118)
size = Vector3(23.35376, 0.497, 42.033325)
material = ExtResource("3_yltlr")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -5.2442346, -3.8159976, 2.5286312)
size = Vector3(20.72754, 0.497, 27)
material = ExtResource("3_yltlr")

[node name="CSGBox3D9" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, -1, 1, -4.371139e-08, 0, -4.371139e-08, -1, -4.371139e-08, 0.053466797, 4.8404493, -44.716305)
material_override = SubResource("StandardMaterial3D_6r07y")
size = Vector3(10, 0.497, 11.024902)
material = ExtResource("3_yltlr")

[node name="CSGBox3D10" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.7460403, 0, 0.032561302)
operation = 2
size = Vector3(2.5079193, 0.497, 1.0902405)
material = SubResource("StandardMaterial3D_af3po")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -0.04063755, 0.99917394, 0, -0.99917394, -0.04063755, 0.6385622, 10.40229, -10.955917)
operation = 2
radius = 2.025879
height = 0.8203125

[node name="Fan" parent="CSGCombiner3D" instance=ExtResource("5_chwpn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6216011, 10.479364, -10.784351)

[node name="Door" parent="." instance=ExtResource("4_xrdnt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05274141, 1.1654887, -44.58361)

[node name="ResetZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -45.50666)
script = ExtResource("5_wrinw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ResetZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.021484375, 0.49529982, -1.1877441)
shape = SubResource("BoxShape3D_6ioyp")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.692584, 0.7213373, 0, -0.7213373, 0.692584, 0, 6.9854136, -32.933556)
spot_range = 49.259014

[node name="Platform" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8643284, -0.48773336, -22.632893)

[node name="JumpDetector" type="Area3D" parent="Platform"]
transform = Transform3D(0.99999976, 0, 0, 0, 0.99999976, 0, 0, 0, 0.99999976, 0.031226039, 0.3403805, 0.0028095245)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform/JumpDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.003718257, 0)
shape = SubResource("CylinderShape3D_wrinw")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform"]
transform = Transform3D(0.6499998, 0, 0, 0, 0.6499998, 0, 0, 0, 0.6499998, 0.031261206, 0.31539837, 0.058351517)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform/StaticBody3D"]
transform = Transform3D(1.0000006, 0, 0, 0, 1.0000006, 0, 0, 0, 1.0000006, 0, -0.38171437, 0)
shape = SubResource("CylinderShape3D_1fal7")

[node name="Sketchfab_Scene" parent="Platform" instance=ExtResource("13_1fal7")]
transform = Transform3D(0.65, 0, 0, 0, 0.65, 0, 0, 0, 0.65, 0, 0, 0)

[node name="TriggerSafe" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6420444, -5.4838905, -22.244354)
script = ExtResource("7_lsmp6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerSafe"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6257323, 0, 0.24962234)
shape = SubResource("BoxShape3D_evi0p")

[node name="Spikes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.714907, -22.169819)

[node name="HideSafePlatform" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.22518921, -10.338903, -23.129599)
material_override = SubResource("StandardMaterial3D_wrinw")
mesh = SubResource("BoxMesh_xrdnt")
skeleton = NodePath("../CSGCombiner3D")

[node name="PassengerDetector" type="Area3D" parent="HideSafePlatform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7702532, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HideSafePlatform/PassengerDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.07019043, 0, 1.0573502)
shape = SubResource("BoxShape3D_lsmp6")

[node name="StaticBody3D" type="StaticBody3D" parent="HideSafePlatform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HideSafePlatform/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_wrinw")

[node name="IntroArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1777285, -0.83177567)
script = SubResource("GDScript_ijtdf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="IntroArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04796505, 1.0215837, -0.2097826)
shape = SubResource("BoxShape3D_pjppf")

[node name="IntroVoice" type="AudioStreamPlayer3D" parent="IntroArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6738485, -0.9171114)
stream = ExtResource("12_oovug")

[node name="SpikeArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.858904, -22.170385)
script = SubResource("GDScript_6ssoq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpikeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.26434684, -1.7511444, 0.17425346)
shape = SubResource("BoxShape3D_yltlr")

[node name="DeathVoicee" type="AudioStreamPlayer3D" parent="SpikeArea"]

[node name="DoorArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -47.226902)
script = SubResource("GDScript_c5xoi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.005479276, 1.3658918, 1.4370232)
shape = SubResource("BoxShape3D_6ssoq")

[node name="FailedVoice" type="AudioStreamPlayer3D" parent="DoorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.007870436, 0.9416851, 0.2707138)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 96.0
offset_top = 558.0
offset_right = 335.0
offset_bottom = 581.0
theme_override_fonts/font = ExtResource("12_pjppf")
script = ExtResource("13_8yhm2")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.10747976, 0.10747973, 0.10747973, 1)
offset_right = 1156.0
offset_bottom = 659.0
color = Color(0, 0, 0, 1)
script = ExtResource("15_yltlr")

[node name="CutSCreen" type="Area3D" parent="."]
script = ExtResource("14_8i23i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CutSCreen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.270864, -12.616998, -22.206488)
shape = SubResource("BoxShape3D_yltlr")

[node name="Ratchet" type="AudioStreamPlayer3D" parent="CutSCreen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10.029535, -22.735157)
stream = ExtResource("12_8i23i")

[node name="Impact" type="AudioStreamPlayer3D" parent="CutSCreen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.890163, -22.735157)
stream = ExtResource("13_pjppf")

[node name="Interact Door" type="Area3D" parent="."]
transform = Transform3D(-0.056344263, 0, 0.9984114, 0, 1, 0, -0.9984114, 0, -0.056344263, 0.6289325, 0, -44.41427)
script = ExtResource("17_8yhm2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interact Door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.48756027, 1.7033012, -0.77576494)
shape = SubResource("BoxShape3D_imks0")

[node name="Spikes2" parent="." instance=ExtResource("19_yltlr")]
transform = Transform3D(0.00019530933, -2.8571454e-05, -0.24999993, 3.6334277e-05, 0.25, -2.8543076e-05, 0.24999993, -3.6311965e-05, 0.00019531348, -0.28998494, -12.925853, -24.451717)

[node name="Spikes3" parent="." instance=ExtResource("19_yltlr")]
transform = Transform3D(0.00019530933, -2.8571454e-05, -0.24999993, 3.6334277e-05, 0.25, -2.8543076e-05, 0.24999993, -3.6311965e-05, 0.00019531348, 11.210506, -12.925853, -24.451717)

[node name="Spikes4" parent="." instance=ExtResource("19_yltlr")]
transform = Transform3D(0.00019530933, -2.8571454e-05, -0.24999993, 3.6334277e-05, 0.25, -2.8543076e-05, 0.24999993, -3.6311965e-05, 0.00019531348, -0.28998494, -12.925853, -21.622992)

[node name="Spikes5" parent="." instance=ExtResource("19_yltlr")]
transform = Transform3D(0.00019530933, -2.8571454e-05, -0.24999993, 3.6334277e-05, 0.25, -2.8543076e-05, 0.24999993, -3.6311965e-05, 0.00019531348, 11.210506, -12.925853, -21.622992)

[node name="Spikes6" parent="." instance=ExtResource("19_yltlr")]
transform = Transform3D(0.00019530933, -2.8571454e-05, -0.24999993, 3.6334277e-05, 0.25, -2.8543076e-05, 0.24999993, -3.6311965e-05, 0.00019531348, -0.28998494, -12.925853, -18.78267)

[node name="Spikes7" parent="." instance=ExtResource("19_yltlr")]
transform = Transform3D(0.00019530933, -2.8571454e-05, -0.24999993, 3.6334277e-05, 0.25, -2.8543076e-05, 0.24999993, -3.6311965e-05, 0.00019531348, 11.210506, -12.925853, -18.78267)

[connection signal="body_entered" from="ResetZone" to="ResetZone" method="_on_body_entered"]
[connection signal="body_entered" from="TriggerSafe" to="TriggerSafe" method="_on_body_entered"]
[connection signal="body_entered" from="IntroArea" to="IntroArea" method="_on_body_entered"]
[connection signal="body_entered" from="SpikeArea" to="SpikeArea" method="_on_body_entered2"]
[connection signal="body_entered" from="DoorArea" to="DoorArea" method="_on_body_entered"]
[connection signal="body_entered" from="CutSCreen" to="CutSCreen" method="_on_body_entered"]
[connection signal="body_entered" from="Interact Door" to="Interact Door" method="_on_body_entered"]
[connection signal="body_exited" from="Interact Door" to="Interact Door" method="_on_body_exited"]
